Site Responsiveness - Possible fix for iOS bug (not tested on iOS yet)

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,12 @@ a, a:hover, .pc-title:hover {
 /* ====== IFRAME ====== */
 
 
+.iphone-fix {
+    height: 100%;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+}
+
 iframe {
     border: 0;
     height: 100%;
